[package]
name = "jk-tui-base"
version = "0.0.1"
edition = "2021"
description = "Scaffold for interactive terminal applications (TUI) based on tokio."
authors = ["Jens Korinth <jens.korinth@tuta.io>"]
license = "MIT"
keywords = ["TUI", "terminal", "tokio"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = { version = "0.26.1", features = ["event-stream", "serde", "futures-core"] }
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tui = { version = "0.19.0", features = ["serde"] }
